#23 support passing multiple --add-exports args to the customCompilerArguments